--- a/department-servic.properties
+++ b/department-servic.properties
@@ -1,7 +1,7 @@
 
 #database configuration
 spring.application.name=Department Server
-spring.datasource.url=jdbc:mysql://localhost:3306/department_db?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
