--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #database configuration
-spring.application.name=User Server
-spring.datasource.url=jdbc:mysql://localhost:3306/user_db?serverTimezone=UTC
+spring.application.name=Department Server
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -13,4 +13,4 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework=INFO
 
 
-server.port=8081
+server.port=8080
